--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.6.4",
+    "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.8.33",
     "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "antd-dayjs-webpack-plugin": "^1.0.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^3.8.0"
   },
   "eslintConfig": {
     "root": true,
